output/nimbus_dualmodel_1round_p4/foundry_validation/F-001_Swap_invariant_uses_a_10_000-based_fee_a/forge_stdout_attempt1.log
Compiler run failed:
Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xc0A6B8c534FaD86dF8FA1AbB17084A70F86EDDc1". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xc0A6B8c534FaD86dF8FA1AbB17084A70F86EDDc1". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:28:40:
   |
28 |     address internal constant TARGET = 0xc0a6b8c534fad86df8fa1abb17084a70f86eddc1;
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x5C69bEe701ef814a2B6a3EDD4B1652CB9cc5aA6f". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x5C69bEe701ef814a2B6a3EDD4B1652CB9cc5aA6f". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:30:52:
   |
30 |     address internal constant UNISWAP_V2_FACTORY = 0x5c69bee701ef814a2b6a3edd4b1652cb9cc5aa6f;
   |                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xC0AEe478e3658e2610c5F7A4A2E1777cE9e4f2Ac". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xC0AEe478e3658e2610c5F7A4A2E1777cE9e4f2Ac". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:31:51:
   |
31 |     address internal constant SUSHISWAP_FACTORY = 0xc0aee478e3658e2610c5f7a4a2e1777ce9e4f2ac;
   |                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but is not exactly 40 hex digits. It is 39 hex digits. If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:33:38:
   |
33 |     address internal constant WETH = 0xc02aa39b223fe8d0a0e5c4f27ead9083c756cc2;
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:34:38:
   |
34 |     address internal constant USDC = 0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48;
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xdAC17F958D2ee523a2206206994597C13D831ec7". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xdAC17F958D2ee523a2206206994597C13D831ec7". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:35:38:
   |
35 |     address internal constant USDT = 0xdac17f958d2ee523a2206206994597c13d831ec7;
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x6B175474E89094C44Da98b954EedeAC495271d0F". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x6B175474E89094C44Da98b954EedeAC495271d0F". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:36:37:
   |
36 |     address internal constant DAI = 0x6b175474e89094c44da98b954eedeac495271d0f;
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

